--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chai": "^4.1.2",
     "immutability-helper": "^2.1.1",
     "material-ui": "^0.17.0",
     "react": "^15.4.2",
@@ -13,6 +14,7 @@
     "redux": "^3.6.0",
     "redux-create-reducer": "^1.1.1",
     "redux-freeze": "^0.1.5",
+    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
     "superagent": "^3.5.2",
